@@ -23,6 +23,7 @@ import org.netbeans.modules.gradle.NbGradleProjectImpl;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Reader;
 import java.io.Writer;
@@ -51,20 +52,28 @@ import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import org.gradle.tooling.BuildLauncher;
 import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ProjectManager;
 import org.netbeans.modules.gradle.GradleProjectLoader;
 import org.netbeans.modules.gradle.ProjectTrust;
 import org.netbeans.modules.gradle.api.GradleProjects;
+import org.netbeans.modules.gradle.api.NbGradleProject;
+import org.netbeans.modules.gradle.api.NbGradleProject.LoadOptions;
 import org.netbeans.modules.gradle.api.NbGradleProject.Quality;
+import org.netbeans.modules.gradle.execute.EscapeProcessingOutputStream;
+import org.netbeans.modules.gradle.execute.GradlePlainEscapeProcessor;
 import org.netbeans.modules.gradle.spi.GradleSettings;
 import org.openide.loaders.DataFolder;
 import org.openide.loaders.DataObject;
 import org.openide.util.Exceptions;
 import org.openide.util.NbBundle;
+import org.openide.windows.IOProvider;
+import org.openide.windows.InputOutput;
 
 /**
- *
+ * Steps, that a New Gradle Project Wizard can perform.
+ * 
  * @author Laszlo Kishalmi
  */
 public final class TemplateOperation implements Runnable {
@@ -236,6 +245,21 @@ public final class TemplateOperation implements Runnable {
          * @since 2.20
          */
         public abstract InitOperation projectName(String name);
+
+        /** Specify the Java version the project would be compiled, tested,
+         * and executed with.
+         * @param version the Java version to be used
+         * @return this builder to chain the calls.
+         * @since 2.40
+         */
+        public abstract InitOperation javaVersion(String version);
+
+        /** Specify whether create comments in the generated files.
+         * @param comments set {@code false} to generate more compact project files.
+         * @return this builder to chain the calls.
+         * @since 2.40
+         */
+        public abstract InitOperation comments(Boolean comments);
     }
 
     private final class InitStep extends InitOperation implements OperationStep {
@@ -245,6 +269,8 @@ public final class TemplateOperation implements Runnable {
         private String testFramework;
         private String basePackage;
         private String projectName;
+        private String javaVersion;
+        private Boolean comments;
 
         InitStep(File target, String type) {
             this.target = target;
@@ -287,6 +313,7 @@ public final class TemplateOperation implements Runnable {
         public Set<FileObject> execute() {
             GradleConnector gconn = GradleConnector.newConnector();
             target.mkdirs();
+            InputOutput io = IOProvider.getDefault().getIO(projectName + " (init)", true);
             try (ProjectConnection pconn = gconn.forProjectDirectory(target).connect()) {
                 List<String> args = new ArrayList<>();
                 args.add("init");
@@ -315,16 +342,53 @@ public final class TemplateOperation implements Runnable {
                     args.add(projectName);
                 }
 
-                if (GradleSettings.getDefault().isOffline()) {
-                    pconn.newBuild().withArguments("--offline").forTasks(args.toArray(new String[0])).run(); //NOI18N
-                } else {
-                    pconn.newBuild().forTasks(args.toArray(new String[0])).run();
+                // --java-version 21
+                if (javaVersion != null) {
+                    args.add("--java-version");
+                    args.add(javaVersion);
+                }
+
+                if (comments != null) {
+                    args.add(comments ? "--comments" : "--no-comments");
+                }
+
+                // gradle init is non-interactive inside the IDE
+                args.add("--use-defaults");
+
+                try (
+                        OutputStream out = new EscapeProcessingOutputStream(new GradlePlainEscapeProcessor(io, false));
+                        OutputStream err = new EscapeProcessingOutputStream(new GradlePlainEscapeProcessor(io, false))
+                ) {
+                    BuildLauncher gradleInit = pconn.newBuild().forTasks(args.toArray(new String[0]));
+                    if (GradleSettings.getDefault().isOffline()) {
+                        gradleInit = gradleInit.withArguments("--offline");
+                    }
+                    gradleInit.setStandardOutput(out);
+                    gradleInit.setStandardError(err);
+                    gradleInit.run();
+
+                } catch (IOException iox) {
                 }
             } catch (GradleConnectionException | IllegalStateException ex) {
                 Exceptions.printStackTrace(ex);
+            } finally {
+                if (io.getOut() != null) io.getOut().close();
+                if (io.getErr() != null) io.getErr().close();
             }
             gconn.disconnect();
             return Collections.singleton(FileUtil.toFileObject(target));
+        }
+
+        @Override
+        public InitOperation javaVersion(String version) {
+            this.javaVersion = version;
+            return this;
+        }
+
+        @Override
+        public InitOperation comments(Boolean comments) {
+            this.comments = comments;
+            return this;
         }
     }
 
@@ -346,6 +410,10 @@ public final class TemplateOperation implements Runnable {
 
     public void addProjectPreload(File projectDir) {
         steps.add(new PreloadProject(projectDir));
+    }
+
+    public void addProjectPreload(File projectDir, List<String> important) {
+        steps.add(new PreloadProject(projectDir, important));
     }
 
     private abstract static class BaseOperationStep implements OperationStep {
@@ -413,16 +481,22 @@ public final class TemplateOperation implements Runnable {
                 } catch (IOException ex) {
                 }
             }
-            return Collections.<FileObject>emptySet();
+            return Set.of();
         }
 
     }
     private static final class PreloadProject extends BaseOperationStep {
 
         final File dir;
+        final List<String> importantFiles;
 
         public PreloadProject(File dir) {
+            this(dir, List.of());
+        }
+
+        public PreloadProject(File dir, List<String> importantFiles) {
             this.dir = dir;
+            this.importantFiles = importantFiles;
         }
 
         @Override
@@ -454,10 +528,18 @@ public final class TemplateOperation implements Runnable {
                             //Just load the project into the cache.
                             GradleProjectLoader loader = nbProject.getLookup().lookup(GradleProjectLoader.class);
                             if (loader != null) {
-                                loader.loadProject(Quality.FULL_ONLINE, null, true, false);
+                                loader.loadProject(NbGradleProject.loadOptions(Quality.FULL_ONLINE).setIgnoreCache(true));
                             }
                         }
-                        return Collections.singleton(projectDir);
+                        Set<FileObject> ret = new LinkedHashSet<>();
+                        ret.add(projectDir);
+                        for (String f : importantFiles) {
+                            FileObject fo = projectDir.getFileObject(f);
+                            if (fo != null) {
+                                ret.add(fo);
+                            }
+                        }
+                        return ret;
                     }
                 } catch (IOException | IllegalArgumentException ex) {
                 }
@@ -563,7 +645,7 @@ public final class TemplateOperation implements Runnable {
                     } catch (IOException | ScriptException ex) {
                         throw new IOException(ex.getMessage(), ex);
                     }
-                    return important ? Collections.singleton(fo) : null;
+                    return important ? Set.of(fo) : null;
                 } catch (IOException ex) {}
             } catch (IOException ex) {}
             return null;
@@ -600,7 +682,7 @@ public final class TemplateOperation implements Runnable {
                     DataFolder targetFolder = DataFolder.findFolder(targetParent);
                     DataObject o = DataObject.find(template);
                     DataObject newData = o.createFromTemplate(targetFolder, targetName, tokens);
-                    return important ? Collections.singleton(newData.getPrimaryFile()) : null;
+                    return important ? Set.of(newData.getPrimaryFile()) : null;
                 } catch (IOException ex) {
 
                 }
